--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-scikit-learn
-matplotlib
-tk
-io
-pickle5
-Pillow
-numpy
+scikit-learn >= 1.2.2
+matplotlib >= 3.7.1
+tk >= 0.1.0
+pickle5 >= 0.0.11
+Pillow >= 9.5.0
+numpy >= 1.24.2
